tried to fix rubber band effect on mobile
Seems that partner logos need to be unified in size, then
width-constrained.

--- a/website/stylesheets/style.css
+++ b/website/stylesheets/style.css
@@ -238,7 +238,7 @@ a.button-twitter {
 	padding: 0.1em 0.6em;
 	text-align: center;
 	width: 7em;
-}
+} 
 
 a.button-dribbble {
 	background-color: #c93764; /* fallback color */
@@ -271,7 +271,7 @@ a.button-facebook:hover {
 }
 
 a.button-googleplus {
-	background-color: #c33219; /* fallback color */
+	background-color: #c33219;  /* fallback color */
 	background: -moz-linear-gradient(top, #e64522, #c33219);
 	background: -ms-linear-gradient(top, #e64522, #c33219);
 	background: -webkit-linear-gradient(top, #e64522, #c33219);
@@ -285,7 +285,7 @@ a.button-googleplus:hover {
 }
 
 a.button-linkedin {
-	background-color: #0073b2; /* fallback color */
+	background-color: #0073b2;  /* fallback color */
 	background: -moz-linear-gradient(top, #009cda, #0073b2);
 	background: -webkit-linear-gradient(top, #009cda, #0073b2);
 	border: 1px solid #0073b2;
@@ -299,7 +299,7 @@ a.button-linkedin:hover {
 }
 
 a.button-pinterest {
-	background-color: #a0171c; /* fallback color */
+	background-color: #a0171c;  /* fallback color */
 	background: -moz-linear-gradient(top, #cb2027, #a0171c);
 	background: -ms-linear-gradient(top, #cb2027, #a0171c);
 	background: -webkit-linear-gradient(top, #cb2027, #a0171c);
@@ -357,7 +357,6 @@ a.button-twitter:hover {
 	background: -ms-linear-gradient(top, #0081ce, #00aced);
 	background: -webkit-linear-gradient(top, #0081ce, #00aced);
 }
-
 
 /* ** =header ** */
 
@@ -799,6 +798,7 @@ p.tuition {
 
 /* ** social buttons ** */
 
+/*
 .socialbuttons {
 	text-align: center;
 	margin-top: 1em;
@@ -809,7 +809,7 @@ p.tuition {
 }
 .socialbuttons a {
 	text-decoration: none;
-}
+} */
 
 /* ** course promotion ** */
 
@@ -892,6 +892,7 @@ a.application:focus {
 	background: #222;
 	padding: 1em 0;
 	text-align: center;	
+	max-width: 100%;
 }
 
 .companies h3 {
@@ -902,6 +903,7 @@ a.application:focus {
 
 .logos {
 	margin-bottom: 1.4em;
+	max-width: 100%;
 }
 
 .companylogo {
@@ -1258,6 +1260,8 @@ h3.part {
 
 .partnerimg img {
 	margin: 0.6em 0;
+	max-width: 100%;
+	height: 39.25%;
 	
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
